2009-03-23  Sven Neumann  <sven@gimp.org>

	Dropped support for the GnomeVFS file-uri backend. Recent GNOME
	releases use GIO/GVfs and libgnomeui will also go away soon.

	* INSTALL 
	* configure.in: removed checks for libgnomeui and libgnome-keyring.

	* plug-ins/file-uri/Makefile.am
	* plug-ins/file-uri/uri-backend-gnomevfs.c: removed.

2009-03-23  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpgradienteditor.c: use GtkAdjustment's accessors.

2009-03-23  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdnd.c (gimp_dnd_data_drop_handle): use
	GtkSelectionData's accessors.

2009-03-23  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainertreeview-dnd.c: use GtkAdjustment's
	accessors.

2009-03-23  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainergridview.c: use GtkAdjustment's accessors.

2009-03-23  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainerbox.c: use accessors instead of
	scrolled_window->vscrollbar.

2009-03-23  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcombotagentry.c: use accessors instead of
	widget->window and widget->style.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpzoompreview.c: use GtkAdjustment's accessors.

	* libgimp/gimpprocbrowserdialog.c: use accessors instead of
	dialog->vbox and widget->parent.

2009-03-22  Sven Neumann  <sven@gimp.org>

	* app/batch.c (batch_run_cmd): added a newline to the output in
	the error case.

	* plug-ins/script-fu/script-fu-eval.c (script_fu_eval_run):
	instead of disabling all output in batch mode, use the usual
	routine for error handling and pass the error string along with
	the return values.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c: use GtkAdjustment's
	accessors.

2009-03-22  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpscaleentry.c: use GtkAdjustment's accessors.

2009-03-22  Michael Natterer  <mitch@gimp.org>
