@@ -145,46 +145,50 @@ name|button
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|gtk_widget_hide
+name|GtkWidget
+modifier|*
+name|plusminus
+decl_stmt|;
+name|plusminus
+operator|=
+name|gtk_scale_button_get_plus_button
 argument_list|(
 name|GTK_SCALE_BUTTON
 argument_list|(
 name|button
 argument_list|)
-operator|->
-name|plus_button
+argument_list|)
+expr_stmt|;
+name|gtk_widget_hide
+argument_list|(
+name|plusminus
 argument_list|)
 expr_stmt|;
 name|gtk_widget_set_no_show_all
 argument_list|(
-name|GTK_SCALE_BUTTON
-argument_list|(
-name|button
-argument_list|)
-operator|->
-name|plus_button
+name|plusminus
 argument_list|,
 name|TRUE
 argument_list|)
 expr_stmt|;
-name|gtk_widget_hide
+name|plusminus
+operator|=
+name|gtk_scale_button_get_minus_button
 argument_list|(
 name|GTK_SCALE_BUTTON
 argument_list|(
 name|button
 argument_list|)
-operator|->
-name|minus_button
+argument_list|)
+expr_stmt|;
+name|gtk_widget_hide
+argument_list|(
+name|plusminus
 argument_list|)
 expr_stmt|;
 name|gtk_widget_set_no_show_all
 argument_list|(
-name|GTK_SCALE_BUTTON
-argument_list|(
-name|button
-argument_list|)
-operator|->
-name|minus_button
+name|plusminus
 argument_list|,
 name|TRUE
 argument_list|)
